feat(01-02): fix ibmi-mcp-server service for standalone template
- Remove monorepo parent directory references (../)
- Use npx to run @ibm/ibmi-mcp-server public npm package
- Point env_file to ./infra/.env instead of parent .env
- Update volume mount to local ./tools directory

--- a/compose.yaml
+++ b/compose.yaml
@@ -47,24 +47,22 @@ services:
       - pgvector
 
   ibmi-mcp-server:
-    image: ${IBMI_MCP_IMAGE:-ibmi-mcp-server:latest}
-    build:
-      context: ../server      # Build from server directory (monorepo root/server)
-      dockerfile: ../Dockerfile  # Path to Dockerfile relative to server context
+    image: node:20-slim
     container_name: ibmi-mcp-server
     restart: unless-stopped
     ports:
       - "3010:3010"
     networks:
       - agent-os
+    working_dir: /app
+    command: npx -y @ibm/ibmi-mcp-server@latest
     env_file:
-      - ../.env     # Load environment variables from monorepo root .env
+      - ./infra/.env
     environment:
       - YAML_AUTO_RELOAD=true
-      - TOOLS_YAML_PATH=/usr/src/app/tools  # Tools path inside container
+      - TOOLS_YAML_PATH=/app/tools
     volumes:
-      - ../tools:/usr/src/app/tools:rw          # Mount tools from monorepo root
-      - ../server/secrets:/usr/src/app/secrets:ro  # Mount secrets from server directory
+      - ./tools:/app/tools:rw
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3010/health"]
       interval: 30s
