change default port

--- a/infra/.env.example
+++ b/infra/.env.example
@@ -7,8 +7,8 @@ DB2_HOST=your_ibmi_hostname
 DB2_USER=your_ibmi_user
 # Password for the IBM i user profile
 DB2_PASSWORD=your_ibmi_password
-# ODBC/JDBC port (default: 8471)
-DB2_PORT=8471
+# port (default: 8076)
+DB2_PORT=8076
 
 # ============================================================
 # MCP Server (Required) - IBM i database access
