--- a/deployment/openshift/ibmi-agent-infra/pgvector/pgvector-buildconfig.yaml
+++ b/deployment/openshift/ibmi-agent-infra/pgvector/pgvector-buildconfig.yaml
@@ -19,8 +19,8 @@ spec:
   source:
     type: Git
     git:
-      uri: "https://github.com/IBM/ibmi-mcp-server.git"
-      ref: chore/agent_deployment
-    contextDir: app/pgvector
+      uri: "https://github.com/ajshedivy/agentos-openshift-template.git"
+      ref: main
+    contextDir: pgvector
   triggers:
     - type: ConfigChange
